# wordnet-lmf.rs

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: build.yml
examples/: read.rs
src/: lib.rs
tests/: tests.rs
