[package]
name = "wordnet-lmf"
version = "0.1.0"
authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
edition = "2018"
description = "A WordNet LMF (Lexical Markup Framework) file parser."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/wordnet-lmf"
homepage = "https://github.com/utkarshkukreti/wordnet-lmf.rs"
repository = "https://github.com/utkarshkukreti/wordnet-lmf.rs"
keywords = ["wordnet", "lmf", "dictionary", "nlp", "english"]

[dependencies]
quick-xml = { version = "0.22", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
expect-test = "1.1"
